Added a template and changed the websocket URL to include the user info

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -5,6 +5,10 @@
 	margin-top: 5%;
 	max-width: 500px;
 }
+h1 {
+	background-color: white;
+	text-align: center;
+}
 
 div#output {
 	overflow: auto;
