--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -1,4 +1,4 @@
-@(title:String)(mainContent: Html)(javascriptContent: Html)
+@(mainContent: Html)(javascriptContent: Html)
 <!DOCTYPE html>
 <!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
 <html class="no-js" lang="en" >
@@ -15,8 +15,8 @@
         <div class="center row">
             <div class="large-12 columns">
                 <div class="row">
-                    <div class="large-12 columns">
-                        <h1>@title</h1>
+                    <div class="large-12 columns text-center">
+                        <h1 class="panel">UglyChat!</h1>
                     </div>
                 </div>
                 @mainContent
