--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -1,17 +1,33 @@
 @(user: User)
 
-@template("Hello"  + user.name + "!") {
-  <div class="row">
-    <div class="large-12 columns">
-      <div id="output"></div>
-    </div>
-  </div>
+@template {
   <div class="row collapse">
-    <div class="large-10 columns">
-      <input type="text" id="message" placeholder="Write something..."/>
-    </div>
-    <div class="large-2 columns">
-      <button id="send" class="button postfix">Send</button>
+    <div class="large-12 columns panel">
+      <div class="row">
+        <div class="small-12 large-8 columns text-left">
+          <h2>Hello @user.name!</h2>
+        </div>
+        <div class="small-12 large-4 columns text-right">
+          <a class="button alert prefix" href="@routes.ChatController.index()">Logout</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-12 columns">
+          <div id="output"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-12 columns">
+          <div class="row collapse">
+            <div class="large-10 columns">
+              <input type="text" id="message" placeholder="Write something..."/>
+            </div>
+            <div class="large-2 columns">
+              <button id="send" class="button postfix">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 } {
