--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -16,7 +16,7 @@
             <div class="large-12 columns">
                 <div class="row">
                     <div class="large-12 columns text-center">
-                        <h1 class="panel">UglyChat!</h1>
+                        <h1 class="panel"><a href="https://github.com/alfonsovng/UglyChat">UglyChat!</a></h1>
                     </div>
                 </div>
                 @mainContent
