--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -5,7 +5,11 @@
     <div class="large-12 columns panel">
       <div class="row">
         <div class="small-12 large-8 columns text-left">
-          <h2>Hello @user.name!</h2>
+          <h2>Hello
+            <span style='background-color: @user.color'>&nbsp;<span
+              style='color: @user.color; filter: invert(100%); font-family: monospace;'
+            >@user.name</span>&nbsp;</span>!
+          </h2>
         </div>
         <div class="small-12 large-4 columns text-right">
           <a class="button alert prefix" id="logout" href="@routes.ChatController.index()">Logout</a>
@@ -41,13 +45,17 @@
           //init the websocket using the method of websocket.js
           initWebsocket('@routes.ChatController.websocket(user)');
 
+          //sets the focus on the message
+          $('#message').focus();
+
           //doSend the text
           $('#send').click(function (e) {
             var m =  $('#message').val();
             if(m) {
-              doSend(m);
+              doSend(escape(m));
               $('#message').val("");
             }
+            $('#message').focus();
           });
 
           //also doSend the text when user hits return on the input
