--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -10,5 +10,8 @@ div#output {
 	border: dotted thin #222222;
 	overflow: auto;
 	height: 300px;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
+	background-color: white;
+	font-family: monospace;
+	font-size: 1.2em;
 }
