--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -12,7 +12,7 @@
           </h2>
         </div>
         <div class="small-12 large-4 columns text-right">
-          <a class="button alert prefix" id="logout" href="@routes.ChatController.index()">Logout</a>
+          <a class="button alert small" id="logout" href="@routes.ChatController.index()">Logout</a>
         </div>
       </div>
       <div class="row">
