filter: invert(100%) doesn't work on Chrome https://github.com/alfonsovng/UglyChat/commit/dabcb32e748700179cff95639e2dfd208c252422#commitcomment-11981345

--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -7,7 +7,7 @@
         <div class="small-12 large-8 columns text-left">
           <h2>Hi
             <span style='background-color: @user.color'>&nbsp;<span
-              style='color: @user.color; filter: invert(100%); font-family: monospace;'
+              style='color: @user.color; filter: invert(100%); -webkit-filter: invert(100%); font-family: monospace;'
             >@user.name</span>&nbsp;</span>!
           </h2>
         </div>
